--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-tactile
-title: Hello World!
+title: Plans?
 project-name: Hello World!
 project-tagline: Life is hard, why not make it harder!
