--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-tactile
 title: Plans?
 project-name: Hello World!
-project-tagline: Life is hard, why not make it harder!
+project-tagline: Life is hard, why not make it harder!!!
 
 # List of links in the navigation bar
 navbar-links:
