--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-tactile
 title: Plans?
-project-name: Hello World!
-project-tagline: Life is hard, why not make it harder!!!
+headline: Hello World!!
+description: Life is hard, why not make it harder!!!
 
